--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Personal Portofolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -38,5 +42,20 @@
           </div>
         </div>
     </nav>
+    
+    <section class="container-fluid d-flex justify-content-center align-items-center" id="home">
+      <div class="bg-white w-100 d-flex flex-column justify-content-center align-items-center ">
+        <p class="poppins-light my-0 mt-3 px-2 border border-2 rounded-pill border-dark">
+          UX/UI Designer
+        </p>
+
+        <p class="poppins-bold text-center fs-4 py-2 my-0">
+          I'm <span style="color:rgb(31, 168, 88)">Mohammed</span> 
+          <br>From Addis Ababa, <span style="color:rgb(31, 168, 88)">Ethiopia</span>
+        </p>
+      </div>
+    </section>
+
+
 </body>
 </html>
