Done with about section (HTML, CSS, JS)

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script defer src="script.js"></script>
 </head>
-<body>
+<body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -42,7 +43,7 @@
           </div>
         </div>
     </nav>
-    
+
     <section class="container-fluid d-flex justify-content-center align-items-center" id="home">
       <div class="bg-white w-100 d-flex flex-column justify-content-center align-items-center ">
         <p class="poppins-light my-0 mt-3 px-2 border border-2 rounded-pill border-dark">
@@ -56,6 +57,67 @@
       </div>
     </section>
 
+    <section class="container my-3" id="about">
+      <h1 class="poppins-bold text-white">About me</h1>
+      <div class="row p-2">
+        <div class="col-md-6">
+          <img class="w-100" src="photo_2025-03-06_06-33-25.jpg" alt="">
+        </div>
+        <div class="col-md-6 d-flex flex-column align-items-center">
+          <nav>
+            <ul>
+              <li class="info-link selected">Skills</li>
+              <li class="info-link">Experiences</li>
+              <li class="info-link">Education</li>
+            </ul>
+          </nav>
+          <div class="info-section Skills show">
+            <p class="text-white">
+              <span>Web Development</span><br>
+              Creating websites using HTML, CSS, and JavaScript, focusing on front-end and back-end development.
+            </p>
+            <p class="text-white">
+              <span>API Integration</span><br>
+              Connecting applications through Application Programming Interfaces (APIs) to enhance functionality and data exchange.
+            </p>
+            <p class="text-white">
+              <span>Database Management</span><br>
+              Working with databases like SQL or NoSQL to store, retrieve, and manage data effectively.
+            </p>
+          </div>
+          <div class="info-section Experiences hide">
+            <p class="text-white">
+              <span>2022 - Present</span><br>
+              Content Idea Creator for Local NGO
+            </p>
+            <p class="text-white">
+              <span>2021 - Present</span><br>
+              Tutor at A+ Online Tutoring
+            </p>
+            <p class="text-white">
+              <span>Summer 2023
+              </span><br>
+              Intern at XYZ Tech Solutions.
+            </p>
+          </div>
+          <div class="info-section Education hide">
+            <p class="text-white">
+              <span>2019 - 2023</span><br>
+              Bachelor’s in Computer Science at Addis Ababa University.
+            </p>
+            <p class="text-white">
+              <span>2024 - 2026</span><br>
+              Master’s in International Relations at University of Addis Ababa.
+            </p>
+            <p class="text-white">
+              <span>2018 - 2019
+              </span><br>
+              Diploma in Graphic Design at Addis Ababa Polytechnic.
+            </p>
+          </div>
 
+        </div>
+      </div>
+    </section>
 </body>
 </html>
