some adjustments for responsive look

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       </div>
     </section>
 
-    <section class="container my-3" id="about">
+    <section class="container my-4" id="about">
       <h1 class="poppins-bold text-white">About me</h1>
-      <div class="row p-2">
+      <div class="row px-5 py-3 gx-5 gy-4">
         <div class="col-md-6">
           <img class="w-100" src="photo_2025-03-06_06-33-25.jpg" alt="">
         </div>
