--- a/index.html
+++ b/index.html
@@ -119,5 +119,31 @@
         </div>
       </div>
     </section>
+
+    <section class="container my-4" id="Services">
+      <h1 class="poppins-bold text-white">
+        Services
+      </h1>
+      <div class="row mx-5">
+        <div class="col-md-4">
+          <div class="card">
+            <h1>service 1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <h1>service 1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <h1>service 1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
+          </div>
+        </div>
+      </div>
+    </section>
 </body>
 </html>
