Done structuring Projects Section

--- a/index.html
+++ b/index.html
@@ -126,20 +126,46 @@
       </h1>
       <div class="row mx-5">
         <div class="col-md-4">
-          <div class="card">
+          <div class="card p-4">
             <h1>service 1</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card">
+          <div class="card p-4">
             <h1>service 1</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card">
+          <div class="card p-4">
             <h1>service 1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="container my-4" id="projects">
+      <h1 class="poppins-bold text-white">
+        Projects
+      </h1>
+      <div class="row mx-5">
+        <div class="col-md-4">
+          <div class="card p-4">
+            <h1>Project 1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-4">
+            <h1>Project 2</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-4">
+            <h1>Project 2</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
           </div>
         </div>
