--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portofolio</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +49,7 @@
         </div>
     </nav>
 
-    <section class="container-fluid d-flex justify-content-center align-items-center" id="home">
+    <section class="container-fluid d-flex justify-content-center align-items-center mb-5" id="home">
       <div class="bg-white w-100 d-flex flex-column justify-content-center align-items-center ">
         <p class="poppins-light my-0 mt-3 px-2 border border-2 rounded-pill border-dark">
           UX/UI Designer
@@ -57,7 +62,7 @@
       </div>
     </section>
 
-    <section class="container my-4" id="about">
+    <section class="container mb-5 pb-5" id="about">
       <h1 class="poppins-bold text-white">About me</h1>
       <div class="row px-5 py-3 gx-5 gy-4">
         <div class="col-md-6">
@@ -120,39 +125,44 @@
       </div>
     </section>
 
-    <section class="container my-4" id="Services">
+    <section class="container mb-5" id="Services">
       <h1 class="poppins-bold text-white">
         Services
       </h1>
-      <div class="row mx-5">
+      <div class="row mx-5 gy-3 d-flex align-items-stretch">
         <div class="col-md-4">
-          <div class="card p-4">
-            <h1>service 1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
+          <div class="card p-4 h-100">
+            <i class="bi bi-window text-primary fs-1"></i>
+            <h3>Custom Web Development</h3>
+            <p>We build modern, responsive, and scalable websites tailored to your business needs. Our team ensures high performance and seamless user experience.</p>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card p-4">
-            <h1>service 1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
+          <div class="card p-4 h-100 d-flex flex-column align-items-center">
+            <i class="bi bi-link text-primary fs-1"></i>
+            <h3>API Integration & Development</h3>
+            <p>Need to connect different platforms? We develop and integrate APIs to ensure smooth communication between your applications and third-party services.</p>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card p-4">
-            <h1>service 1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
+          <div class="card p-4 h-100">
+            <i class="bi bi-bug text-primary fs-1"></i>
+            <h3>Bug Fixing & Optimization</h3>
+            <p>Struggling with a buggy website or slow performance? We analyze, debug, and optimize your code for a smooth and efficient system.</p>
           </div>
         </div>
       </div>
     </section>
+    
 
     <section class="container my-4" id="projects">
       <h1 class="poppins-bold text-white">
         Projects
       </h1>
-      <div class="row mx-5">
+      <div class="row mx-5 gy-3">
         <div class="col-md-4">
           <div class="card p-4">
+            <i class="bi bi-alarm"></i>
             <h1>Project 1</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
           </div>
@@ -171,5 +181,6 @@
         </div>
       </div>
     </section>
+
 </body>
 </html>
