--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
     </section>
 
-    <section class="container mb-5 pb-5" id="about">
+    <section class="container mb-5 pb-md-0 pb-5" id="about">
       <h1 class="poppins-bold text-white">About me</h1>
       <div class="row px-5 py-3 gx-5 gy-4">
         <div class="col-md-6">
@@ -153,34 +153,38 @@
         </div>
       </div>
     </section>
-    
 
     <section class="container my-4" id="projects">
-      <h1 class="poppins-bold text-white">
-        Projects
-      </h1>
+      <h1 class="poppins-bold text-white">Projects</h1>
       <div class="row mx-5 gy-3">
         <div class="col-md-4">
-          <div class="card p-4">
-            <i class="bi bi-alarm"></i>
-            <h1>Project 1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
+          <div class="card p-4 d-flex flex-column">
+            <h3>ACT clone website</h3>
+            <div class="img-container">
+              <img src="1.png" alt="ACT Clone Website" class="project-img">
+            </div>
+            <a href="https://moodinahmed1.github.io/WebProgrammingII/" class="mt-2">Visit Page</a>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card p-4">
-            <h1>Project 2</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
+          <div class="card p-4 d-flex flex-column">
+            <h3>Simple Tribute Page</h3>
+            <div class="img-container">
+              <img src="2.png" alt="Simple Tribute Page" class="project-img">
+            </div>
+            <a href="https://moodinahmed1.github.io/SimpleTributePage-Completed/" class="mt-2">Visit Page</a>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card p-4">
-            <h1>Project 2</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dignissimos veniam ipsa corporis ab velit, doloremque, molestias harum pariatur dolor facilis possimus obcaecati ipsum vitae, id quae soluta optio mollitia!</p>
+          <div class="card p-4 d-flex flex-column">
+            <h3>Personal Portfolio</h3>
+            <div class="img-container">
+              <img src="3.png" alt="Personal Portfolio" class="project-img">
+            </div>
+            <a href="https://moodinahmed1.github.io/SuperSimplePortfolio-Completed/" class="mt-2">Visit Page</a>
           </div>
         </div>
       </div>
     </section>
-
 </body>
 </html>
