--- a/index.html
+++ b/index.html
@@ -186,5 +186,31 @@
         </div>
       </div>
     </section>
+
+    <section class="container my-5" id="contact">
+      <h2 class="poppins-bold text-center text-white mb-4">Contact Me</h2>
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="custom-card-2 p-4 shadow-lg border-0 rounded-4">
+            <h4 class="text-center mb-3">Get In Touch</h4>
+            <form action="#" method="POST">
+              <div class="form-group mb-3">
+                <label for="name" class="form-label text-white">Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
+              </div>
+              <div class="form-group mb-3">
+                <label for="email" class="form-label text-white">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+              </div>
+              <div class="form-group mb-3">
+                <label for="message" class="form-label text-white">Message</label>
+                <textarea class="form-control" id="message" rows="4" placeholder="Enter your message" required></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary w-100 mt-3">Send Message</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
 </body>
 </html>
