made the projects section be made dynamycally

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
         <div class="col-md-6">
           <img class="w-100 h-100" style="object-fit: cover;" src="photo_2025-03-06_06-33-25.jpg" alt="">
         </div>
-        <div class="col-md-6 d-flex flex-column align-items-center">
+        <div class="col-md-6 d-flex flex-column align-items-center justify-content-center gap-3">
+          <p class="text-white text-center">
+            I am a passionate web developer with a keen interest in creating dynamic and responsive websites. My journey in web development began with a fascination for how websites work, and it has since evolved into a full-fledged career. I specialize in both front-end and back-end development, ensuring that every project I undertake is not only visually appealing but also functional and user-friendly.
           <nav>
             <ul class="d-flex">
               <li class="info-link selected">Skills</li>
@@ -72,6 +74,7 @@
               <li class="info-link">Education</li>
             </ul>
           </nav>
+
           <div class="info-section Skills show align-items-center-lg">
             <p class="text-white">
               <span>Web Development</span><br>
@@ -86,34 +89,31 @@
               Working with databases like SQL or NoSQL to store, retrieve, and manage data effectively.
             </p>
           </div>
+
           <div class="info-section Experiences hide">
             <p class="text-white">
               <span>2022 - Present</span><br>
-              Content Idea Creator for Local NGO
+              Freelance Web Developer. Developing custom websites and applications for various clients, focusing on user experience and performance.
             </p>
             <p class="text-white">
-              <span>2021 - Present</span><br>
-              Tutor at A+ Online Tutoring
+              <span>2021 - 2022</span><br>
+              Junior Web Developer. Worked on various projects, enhancing my skills in web development and project management.
             </p>
             <p class="text-white">
-              <span>Summer 2023
+              <span>2020 - 2021
               </span><br>
-              Intern at XYZ Tech Solutions.
+              Intern, focusing on front-end development and user experience design.
             </p>
           </div>
+
           <div class="info-section Education hide">
             <p class="text-white">
-              <span>2019 - 2023</span><br>
-              Bachelor’s in Computer Science at Addis Ababa University.
+              <span>2022 - present</span><br>
+              Bachelor’s in Computer Science at American College of Technology.
             </p>
             <p class="text-white">
-              <span>2024 - 2026</span><br>
-              Master’s in International Relations at University of Addis Ababa.
-            </p>
-            <p class="text-white">
-              <span>2018 - 2019
-              </span><br>
-              Diploma in Graphic Design at Addis Ababa Polytechnic.
+              <span>2023 - 2024</span><br>
+              web development certificate at freeCodeCamp.
             </p>
           </div>
         </div>
@@ -160,47 +160,7 @@
     </section>
 
     <section class="container mt-5" id="projects">
-      <h1 class="poppins-bold text-white text-md-start text-center" style="font-size: 3em;" >Projects</h1>
-      <div class="row mx-md-5 gy-4 mt-1">
-        <div class="col-lg-4">
-          <div class="card p-2 d-flex flex-column">
-            <h3 class="p-1 text-center poppins-light">ACT clone website</h3>
-            <div class="img-container">
-              <img src="1.png" alt="ACT Clone Website" class="project-img">
-            </div>
-            <a href="https://moodinahmed1.github.io/WebProgrammingII/" class="mt-2">Visit Page</a>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card p-2 d-flex flex-column">
-            <h3 class="p-1 text-center poppins-light">Simple Tribute Page</h3>
-            <div class="img-container">
-              <img src="2.png" alt="Simple Tribute Page" class="project-img">
-            </div>
-            <a href="https://moodinahmed1.github.io/SimpleTributePage-Completed/" class="mt-2">Visit Page</a>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card p-2 d-flex flex-column">
-            <h3 class="p-1 text-center poppins-light">Personal Portfolio</h3>
-            <div class="img-container">
-              <img src="3.png" alt="Personal Portfolio" class="project-img">
-            </div>
-            <a href="https://moodinahmed1.github.io/SuperSimplePortfolio-Completed/" class="mt-2">Visit Page</a>
-          </div>
-        </div>
-      </div>
-      <div class="row mx-md-5 gy-4 mt-1">
-        <div class="col-lg-4">
-          <div class="card p-2 d-flex flex-column">
-            <h3 class="p-1 text-center poppins-light">Toyota Website clone</h3>
-            <div class="img-container">
-              <img src="4.png" alt="ACT Clone Website" class="project-img">
-            </div>
-            <a href="https://moodinahmed1.github.io/Toyota-Website-Clone-Bootstrap/" class="mt-2">Visit Page</a>
-          </div>
-        </div>
-      </div>
+     
     </section>
 
     <section class="container my-5" id="contact">
@@ -228,5 +188,85 @@
         </div>
       </div>
     </section>
+
+    <footer class="bg-dark text-white text-center py-4">
+      <p class="mb-0">© 2025 Mohammed. All rights reserved.</p>
+      <div class="mt-2">
+        <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+        <a href="#" class="text-white me-3"><i class="bi bi-linkedin"></i></a>
+        <a href="#" class="text-white"><i class="bi bi-github"></i></a>
+      </div>
+    </footer>
+
+    <script>
+      // Define your project data
+      const projects = [
+        {
+          title: "ACT clone website",
+          img: "1.png",
+          link: "https://moodinahmed1.github.io/WebProgrammingII/"
+        },
+        {
+          title: "Simple Tribute Page",
+          img: "2.png",
+          link: "https://moodinahmed1.github.io/SimpleTributePage-Completed/"
+        },
+        {
+          title: "Personal Portfolio",
+          img: "3.png",
+          link: "https://moodinahmed1.github.io/SuperSimplePortfolio-Completed/"
+        },
+        {
+          title: "Toyota Website clone",
+          img: "4.png",
+          link: "https://moodinahmed1.github.io/Toyota-Website-Clone-Bootstrap/"
+        }
+      ];
+
+      // Function to chunk array into rows of 3
+      function chunkArray(array, size) {
+        const result = [];
+        for (let i = 0; i < array.length; i += size) {
+          result.push(array.slice(i, i + size));
+        }
+        return result;
+      }
+
+      const container = document.querySelector("#projects");
+
+      // Insert heading
+      const heading = document.createElement("h1");
+      heading.className = "poppins-bold text-white text-md-start text-center";
+      heading.style.fontSize = "3em";
+      heading.innerText = "Projects";
+      container.appendChild(heading);
+
+      // Create and append rows
+      const chunks = chunkArray(projects, 3);
+      chunks.forEach(chunk => {
+        const row = document.createElement("div");
+        row.className = "row mx-md-5 gy-4 mt-1";
+
+        chunk.forEach(project => {
+          const col = document.createElement("div");
+          col.className = "col-lg-4";
+
+          col.innerHTML = `
+            <div class="card p-2 d-flex flex-column">
+              <h3 class="p-1 text-center poppins-light">${project.title}</h3>
+              <div class="img-container">
+                <img src="${project.img}" alt="${project.title}" class="project-img">
+              </div>
+              <a href="${project.link}" class="mt-2" target="_blank">Visit Page</a>
+            </div>
+          `;
+
+          row.appendChild(col);
+        });
+
+        container.appendChild(row);
+      });
+    </script>
 </body>
 </html>
