--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         {
           title: "ACT clone website",
           img: "1.png",
-          link: "https://moodinahmed1.github.io/WebProgrammingII/"
+          link: "https://moodinahmed1.github.io/ACT-Website-Clone/"
         },
         {
           title: "Simple Tribute Page",
