--- a/index.html
+++ b/index.html
@@ -169,18 +169,18 @@
         <div class="col-md-6">
           <div class="custom-card-2 p-4 shadow-lg border-0 rounded-4">
             <h4 class="text-center mb-3">Get In Touch</h4>
-            <form action="#" method="POST">
+            <form action="https://formsubmit.co/moodinahmed@gmail.com" method="POST">
               <div class="form-group mb-3">
                 <label for="name" class="form-label text-white">Name</label>
-                <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
+                <input name="name" type="text" class="form-control" id="name" placeholder="Enter your name" required>
               </div>
               <div class="form-group mb-3">
                 <label for="email" class="form-label text-white">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                <input name="email" type="email" class="form-control" id="email" placeholder="Enter your email" required>
               </div>
               <div class="form-group mb-3">
                 <label for="message" class="form-label text-white">Message</label>
-                <textarea class="form-control" id="message" rows="4" placeholder="Enter your message" required></textarea>
+                <textarea name="message" class="form-control" id="message" rows="4" placeholder="Enter your message" required></textarea>
               </div>
               <button type="submit" class="btn btn-primary w-100 mt-3">Send Message</button>
             </form>
@@ -207,16 +207,19 @@
           img: "1.png",
           link: "https://moodinahmed1.github.io/ACT-Website-Clone/"
         },
+
         {
           title: "Simple Tribute Page",
           img: "2.png",
           link: "https://moodinahmed1.github.io/SimpleTributePage-Completed/"
         },
+
         {
           title: "Personal Portfolio",
           img: "3.png",
           link: "https://moodinahmed1.github.io/SuperSimplePortfolio-Completed/"
         },
+
         {
           title: "Toyota Website clone",
           img: "4.png",
