--- a/index.html
+++ b/index.html
@@ -169,11 +169,12 @@
         <div class="col-md-6">
           <div class="custom-card-2 p-4 shadow-lg border-0 rounded-4">
             <h4 class="text-center mb-3">Get In Touch</h4>
-            <form action="https://formsubmit.co/moodinahmed@gmail.com" method="POST">
+            <form action="https://formsubmit.co/7c5ce551f1ed8549831d210dfe50a5dd" method="POST">
               <div class="form-group mb-3">
                 <label for="name" class="form-label text-white">Name</label>
                 <input name="name" type="text" class="form-control" id="name" placeholder="Enter your name" required>
               </div>
+
               <div class="form-group mb-3">
                 <label for="email" class="form-label text-white">Email</label>
                 <input name="email" type="email" class="form-control" id="email" placeholder="Enter your email" required>
