--- a/index.html
+++ b/index.html
@@ -225,6 +225,11 @@
           title: "Toyota Website clone",
           img: "4.png",
           link: "https://moodinahmed1.github.io/Toyota-Website-Clone-Bootstrap/"
+        },
+        {
+          title: "Car Dealership Dashboard",
+          img: "5.png",
+          link: "https://moodinahmed1.github.io/SimpleXYZCarDealershipDashboard/"
         }
       ];
 
