--- a/index.html
+++ b/index.html
@@ -230,6 +230,11 @@
           title: "Car Dealership Dashboard",
           img: "5.png",
           link: "https://moodinahmed1.github.io/SimpleXYZCarDealershipDashboard/"
+        },
+        {
+          title: "Ethiopian Airport Dashboard",
+          img: "6.png",
+          link: "https://moodinahmed1.github.io/AirplaneSystemDashBoard/"
         }
       ];
 
